--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
 	<title>ChatGPT Web Midjourney Proxy</title>
 </head>
-
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?00cd1981f2fc5b80a1268454e35669d0";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
+	
 <body class="dark:bg-black">
 	<div id="app">
 		<style>
